package main;

import javax.swing.*;
import java.awt.*;

import static javax.swing.WindowConstants.EXIT_ON_CLOSE;

public class GraphicsView implements View{

    Controller controller = new Controller(this);

    JFrame menu = new JFrame();
    JFrame game = new JFrame();

    Font comicSans = new Font("Comic Sans MS", Font.PLAIN, 18);

    public GraphicsView() {
        menu.setDefaultCloseOperation(EXIT_ON_CLOSE);
        menu.setSize(350, 400);
        menu.setLocation(550, 50);
        menu.setTitle("Virologist game");
        menu.setResizable(true);
        menu.setLayout(new BorderLayout());
        generateMenu();
        menu.setVisible(true);

        game.setDefaultCloseOperation(EXIT_ON_CLOSE);
        game.setSize(400, 400);
        game.setLocation(550, 50);
        game.setTitle("Virologist game");
        game.setResizable(true);
        game.setLayout(new BorderLayout());
        generateGame();
    }

    public void generateGame() {
        JMenuBar menuBar = new JMenuBar();
        JMenu jMenu = new JMenu("File");

        JMenuItem gameOverMenuItem = new JMenuItem("Menu");
        gameOverMenuItem.addActionListener(e -> {
            game.setVisible(false);
            menu.setVisible(true);
        });
        jMenu.add(gameOverMenuItem);
        menuBar.add(jMenu);

        JMenuItem exitMenuItem = new JMenuItem("Exit");
        exitMenuItem.addActionListener(e -> System.exit(0));
        jMenu.add(exitMenuItem);
        menuBar.add(jMenu);

        game.add(menuBar);
        game.setJMenuBar(menuBar);
    }

    public void generateMenu() {
        JLabel title = new JLabel("Virologist game");

        title.setFont(comicSans);
        JLabel credits = new JLabel("Developed by service_unavailable");
        credits.setFont(comicSans);

        JButton startButton = new JButton("Start");
        startButton.setFont(comicSans);
        startButton.addActionListener(e -> {
            menu.setVisible(false);
            game.setVisible(true);
            System.out.println("TODO START"); //TODO
        });
        JButton quitButton = new JButton("Quit");
        quitButton.setFont(comicSans);
        quitButton.addActionListener(e -> System.exit(0));

        JPanel buttonPanel = new JPanel(new BorderLayout());
        buttonPanel.add(startButton, BorderLayout.NORTH);
        buttonPanel.add(quitButton, BorderLayout.SOUTH);

        JTextArea textArea = new JTextArea();
        textArea.setEditable(false);

        JLabel nameLabel = new JLabel("Name:");
        JTextField nameInput = new JTextField("write here");
        nameInput.setToolTipText("write here");
        nameInput.setEditable(true);
        nameInput.setSize(500,200);
        JButton addButton = new JButton("Add");
        addButton.addActionListener(e -> {
            controller.addPlayer(new Virologist(nameInput.getText()), "Hungary");
            textArea.append(nameInput.getText()+'\n');
            SwingUtilities.updateComponentTreeUI(menu);
            System.out.println("TODO ADD");
        }); //TODO
        addButton.setFont(comicSans);
        addButton.setSize(100, 50);

        JPanel getNewPlayerPanel = new JPanel(new FlowLayout());
        getNewPlayerPanel.setSize(600, 800);
        getNewPlayerPanel.add(nameLabel);
        getNewPlayerPanel.add(nameInput);
        getNewPlayerPanel.add(nameInput);
        getNewPlayerPanel.add(addButton);




        JPanel addPlayerPanel = new JPanel(new BorderLayout());
        addPlayerPanel.add(getNewPlayerPanel, BorderLayout.NORTH);
        addPlayerPanel.add(textArea, BorderLayout.CENTER);

        JPanel centerPanel = new JPanel(new BorderLayout());
        centerPanel.add(buttonPanel, BorderLayout.EAST);
        centerPanel.add(addPlayerPanel, BorderLayout.WEST);

        JPanel menuPanel = new JPanel(new BorderLayout());
        menuPanel.add(title,  BorderLayout.NORTH);
        menuPanel.add(centerPanel, BorderLayout.CENTER);
        menuPanel.add(credits, BorderLayout.SOUTH);

        menu.add(menuPanel);

    }

    @Override
    public void menu() {

    }

    @Override
    public void chooseAction() {

    }

    @Override
    public void gameOver(Virologist winner) {

    }
}
