package observables;

import javax.swing.*;

public interface IObservable {
    JComponent onPaint();
}
