package observables;

import javax.swing.*;

public class ObservableAgent implements IObservable {
    @Override
    public JComponent onPaint() {
        return null;
    }
}
