package observables;

import javax.swing.*;

public class ObservableEquipment implements IObservable {
    @Override
    public JComponent onPaint() {
        return null;
    }
}
