package observables;

import javax.swing.*;

public class ObservableResource implements IObservable {
    @Override
    public JComponent onPaint() {
        return null;
    }
}
