package observables;

import javax.swing.*;

public class ObservableTile implements IObservable {
    @Override
    public JComponent onPaint() {
        return null;
    }
}
