package observables;

import javax.swing.*;

public class ObservableVirologist implements IObservable {
    @Override
    public JComponent onPaint() {
        return null;
    }
}
